add: modal styles

--- a/TODO/src/templates/App.css
+++ b/TODO/src/templates/App.css
@@ -26,3 +26,9 @@ body {
 form > * {
     display: block;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-gap: 25px;
+}
